opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/ocaml-fswatch/"
bug-reports: "https://github.com/kandu/ocaml-fswatch/issues"
license: "MIT"
dev-repo: "git://github.com/kandu/ocaml-fswatch"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "fswatch"
  "async_unix" {>= "v0.11.0"}
  "dune" {>= "1.4"}
]

synopsis: "JaneStreet Async extension for fswatch"
